# vc-outreach-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
examples/: investors.csv  orallexa.yml
tests/: conftest.py  test_drafter.py  test_drafter_customer.py  test_enricher.py  test_mcp_server.py  test_queue.py  test_sender.py  test_vibex_traction.py
vc_outreach_agent/: __init__.py  __main__.py  drafter.py  enricher.py  mcp_server.py  models.py  queue.py  sender.py  vibex_traction.py
