[project]
name = "vc-outreach-agent"
version = "0.2.0"
description = "Solo Founder OS agent #3 — find investors, draft personalized cold emails, manage replies via a markdown HITL queue."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
vc-outreach-agent = "vc_outreach_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/alex-jb/vc-outreach-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vc_outreach_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
