[project]
name = "vc-outreach-agent"
version = "0.7.0"
description = "Solo Founder OS agent #3 — find investors, draft personalized cold emails, manage replies via a markdown HITL queue."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
    "solo-founder-os>=0.5.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
keywords = ["fundraising", "cold-email", "smtp", "claude", "hitl", "indie"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "mcp>=1.0"]

[project.scripts]
vc-outreach-agent = "vc_outreach_agent.__main__:main"
vc-outreach-mcp = "vc_outreach_agent.mcp_server:main"

[project.urls]
Repository = "https://github.com/alex-jb/vc-outreach-agent"
Issues = "https://github.com/alex-jb/vc-outreach-agent/issues"
Homepage = "https://github.com/alex-jb/vc-outreach-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vc_outreach_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
