[project]
name = "vc-outreach-agent"
version = "0.9.0"
description = "Solo Founder OS agent #3 — draft personalized cold emails to investors (vc mode) or paying customers (customer mode), HITL queue + SMTP sender. Merged customer-outreach-agent in v0.9.0."
authors = [{ name = "Alex Ji", email = "alex@vibexforge.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.40",
    "solo-founder-os>=0.10.0",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
keywords = ["fundraising", "sales", "customer-outreach", "cold-email", "smtp", "claude", "hitl", "indie"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "mcp>=1.0"]

[project.scripts]
vc-outreach-agent = "vc_outreach_agent.__main__:main"
vc-outreach-mcp = "vc_outreach_agent.mcp_server:main"
# v0.9.0: customer mode (merged from deprecated customer-outreach-agent repo).
# Existing shell history / cron / aliases that called `customer-outreach-agent`
# keep working — the binary now calls main() with mode=customer pre-set.
customer-outreach-agent = "vc_outreach_agent.__main__:main_customer"

[project.urls]
Repository = "https://github.com/alex-jb/vc-outreach-agent"
Issues = "https://github.com/alex-jb/vc-outreach-agent/issues"
Homepage = "https://github.com/alex-jb/vc-outreach-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["vc_outreach_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line-length: docstrings + log messages run long; not a bug
    "E731",  # lambda-assignment: idiomatic in tests
    "E402",  # module-level import not at top: __future__ + sys.path tricks
    "E702",  # multiple-statements-on-one-line: idiomatic in test fixtures
    "E741",  # ambiguous-variable-name: short loop vars are fine in context
]
